adding mobile responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,11 @@
     cursor: pointer;
     color: white;
 }
+
+/* Media Queries */
+@media screen and (max-width: 770px){
+    .switch {
+        flex-direction: column-reverse;
+        display:flex;
+    }
+}
