--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,12 @@
     color: white;
 }
 
+.drink-title{
+    display: flex;
+    justify-content: space-between;
+}
+
+
 /* Media Queries */
 @media screen and (max-width: 770px){
     .switch {
