added styling for thumbnail images and animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,30 @@
-.saveCard:hover{
-    cursor: pointer;
-    color: #3273DC;
+@-webkit-keyframes swinging{
+    0%{-webkit-transform: rotate(10deg);}
+    50%{-webkit-transform: rotate(-5deg)}
+    100%{-webkit-transform: rotate(10deg);}
 }
+ 
+@keyframes swinging{
+    0%{transform: rotate(10deg);}
+    50%{transform: rotate(-5deg)}
+    100%{transform: rotate(10deg);}
+}
+ 
+.saveCard:hover{
+    -webkit-animation: swinging 1s ease-in-out forwards infinite;
+    animation: swinging 1s ease-in-out forwards infinite;
+}
+
+img.thumbnail:hover{
+    box-shadow: 10px 5px   #ffdbac;
+}
+
+.saveCard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .sticky {
     position: sticky;
     top: 20px;
@@ -24,5 +47,10 @@
     .switch {
         flex-direction: column-reverse;
         display:flex;
+    }
+
+    .sticky {
+        position:relative;
+        margin-bottom: 25px;
     }
 }
